# eqo

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  constants.rs  lib.rs  main.rs  shared.rs
src/commands/: listen.rs  mod.rs  run.rs  server.rs
tests/: main_test.rs
