[package]
name = "eqo"
version = "1.0.0"
authors = ["Salah Kanjo <dev.salah.kanjo@gmail.com>"]
license = "MIT"
description = "Listen for triggers and execute actions seamlessly."
repository = "https://github.com/sakanjo/catcho"
keywords = ["tcp", "tunnel", "network", "cli", "actions"]
categories = ["network-programming", "cli", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "eqo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive", "env"] }
clearscreen = "2.0.1"
colored = "2.1.0"
dashmap = "5.5.3"
derive-new = "0.6.0"
futures = "0.3.30"
rstest = "0.18.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
subprocess = "0.2.9"
tap = "1.0.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["v4"] }
